<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background_gradient"
    tools:context=".activities.HomeActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="635dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@drawable/reminder_logo" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="196dp"
                android:layout_height="72dp"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center"
                android:text="@string/welcome_to_the_application"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exploreButton_home"
                android:layout_width="130dp"
                android:layout_height="67dp"
                android:backgroundTint="#0D6004"
                android:text="@string/explore" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"
        app:layout_constraintVertical_bias="0.975">

        <ImageView
            android:id="@+id/homeLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/home_link"
            app:srcCompat="@drawable/home_icon2" />

        <ImageView
            android:id="@+id/exploreLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/explore_link"
            app:srcCompat="@drawable/arrow_icon" />

        <ImageView
            android:id="@+id/notificationLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="notification"
            app:srcCompat="@drawable/notification" />

        <ImageView
            android:id="@+id/profileLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_link"
            app:srcCompat="@drawable/profile_icon" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>