<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background_gradient"
    tools:context=".activities.NotificationsActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"
        app:layout_constraintVertical_bias="0.975">

        <ImageView
            android:id="@+id/homeLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/home_link"
            app:srcCompat="@drawable/home_icon" />

        <ImageView
            android:id="@+id/exploreLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/explore_link"
            app:srcCompat="@drawable/arrow_icon" />

        <ImageView
            android:id="@+id/notificationLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:contentDescription="notification"
            app:srcCompat="@drawable/notification_icon2" />

        <ImageView
            android:id="@+id/profileLink"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_link"
            app:srcCompat="@drawable/profile_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="Notifications"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_notifications"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/msg_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>